(Backend) New Counselling Views, chat app, db transactions
New chat app

New Models
- counselling.Session
- chat.Chat
- chat.Message

Added transactions: Not all required code is covered

New views
- SessionsView
- SlotView
- also modified other counselling views
