# backend/counselling/views/SlotsView.py
@@ -3,23 +3,35 @@ from rest_framework.views import APIView
 from rest_framework.permissions import IsAuthenticated
 from django.conf import settings
 from django.db.models import Q
+from django.db import transaction
 import datetime
 
 from util.response import ErrorResponseTemplates
 from counselling.models import Slot
 from counselling.serializers import SlotSerializer
-from counselling.views.decorators import counsellor_exists, is_user_counsellor
+from counselling.views.decorators import counsellor_exists, is_user_counsellor, slot_valid_exists
 
 class SlotsView(APIView):
     permission_classes = [IsAuthenticated]
+    
+    @counsellor_exists
+    @is_user_counsellor
+    def get(self, request, counsellor_id):
+        slots = request.counsellor.slots.all_valids().order_by('from_time')
+
+        slots_s = SlotSerializer(slots, many=True)
+
+        return Response(slots_s.data)
+    
 
     @counsellor_exists
     @is_user_counsellor
     def post(self, request, counsellor_id):
-        # import ipdb;ipdb.set_trace()
-
         try:
             slots = request.data
+
+            if not slots:
+                return ErrorResponseTemplates.BAD_REQUEST("Atleast one slot is required")
 
             if isinstance(slots, dict):
                 slots = [slots]
@@ -84,4 +96,40 @@ class SlotsView(APIView):
 
         # Check if user is counsellor
         slots_s.save(counsellor=request.counsellor, is_active=True,  timezone=request.counsellor.timezone)
+
         return Response(slots_s.data)
+    
+    @counsellor_exists
+    @is_user_counsellor
+    def delete(self, request, counsellor_id):
+        # import ipdb;ipdb.set_trace()
+        count = 0
+        if request.data.get('disabled'):
+            if request.data.get('disabled') is not True:
+                return ErrorResponseTemplates.BAD_REQUEST('`disabled` can not be False')
+
+            count, _ = request.counsellor.slots.all_valids().delete()
+            
+        elif request.data.get("slots"):
+            req_slots = request.data.get("slots")
+            
+            if not isinstance(req_slots, list):
+                return ErrorResponseTemplates.BAD_REQUEST("Invalid payload - `slots` must be array of slots id")
+
+            filters = Q()
+            for slot in req_slots:
+                filters |= Q(id=slot)
+        
+
+            with transaction.atomic():
+                query = request.counsellor.slots.all_valids().filter(filters)
+                count, _ = query.delete()
+
+                if count != len(req_slots):
+                    transaction.set_rollback(True)
+                    return ErrorResponseTemplates.BAD_REQUEST("All slots ids must be valid")
+
+        return Response({
+            "total": count,
+        })
+
